--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,3 +1,3 @@
 [alias]
 live = ["watch", "-q", "-c", "-w", "src/", "-w", "Cargo.toml", "-x", "run"]
-testcov = "tarpaulin --out lcov"
+testcov = "tarpaulin --out lcov --exclude-files src/main.rs"
