--- a/.github/workflows/rust-coverage-ci.yml
+++ b/.github/workflows/rust-coverage-ci.yml
@@ -30,7 +30,7 @@ jobs:
               run: cargo install cargo-tarpaulin
               continue-on-error: true
             - name: Run Tarpaulin
-              run: cargo tarpaulin --out lcov
+              run: cargo tarpaulin --out lcov --exclude-files src/main.rs
             - name: Coverage Upload
               uses: codecov/codecov-action@v3
               with:
