--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,3 @@
-[package]
-name = "rusty-puzzle-cube"
-version = "0.3.2"
-edition = "2021"
-authors = ["Mike Croall"]
-
-[dependencies]
-colored = "2.1.0"
-enum-map = "2.7.3"
-itertools = "0.12.1"
-
-[dev-dependencies]
-paste = "1.0.14"
-pretty_assertions = "1.4.0"
+[workspace]
+resolver = "2"
+members = ["puzzle-cube"]
