--- a/puzzle-cube-ui/Cargo.toml
+++ b/puzzle-cube-ui/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 [dependencies]
 rusty-puzzle-cube = { path = "../puzzle-cube" }
 three-d = "0.17.0"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
