--- a/puzzle-cube-ui/Cargo.toml
+++ b/puzzle-cube-ui/Cargo.toml
@@ -5,6 +5,6 @@ edition = "2021"
 
 [dependencies]
 rusty-puzzle-cube = { path = "../puzzle-cube" }
-three-d = "0.17.0"
+three-d = { version = "0.17.0", features = ["egui-gui"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
