--- a/puzzle-cube-ui/Cargo.toml
+++ b/puzzle-cube-ui/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 [dependencies]
 rusty-puzzle-cube = { path = "../puzzle-cube" }
 three-d = { version = "0.17.0", features = ["egui-gui"] }
+three-d-asset = { version = "0.7.0", features = ["png"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
