--- a/puzzle-cube-ui/Cargo.toml
+++ b/puzzle-cube-ui/Cargo.toml
@@ -9,3 +9,6 @@ three-d = { version = "0.17.0", features = ["egui-gui"] }
 three-d-asset = { version = "0.7.0", features = ["png"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+
+[dev-dependencies]
+pretty_assertions = "1.4.0"
