--- a/puzzle-cube-ui/Cargo.toml
+++ b/puzzle-cube-ui/Cargo.toml
@@ -12,3 +12,17 @@ tracing-subscriber = "0.3.18"
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
+
+[[bin]]
+name = "rusty_puzzle_cube"
+path = "./src/lib.rs"
+
+[lib]
+crate-type = ["cdylib"]
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+log = "0.4.21"
+wasm-bindgen = "0.2.92"
+wasm-bindgen-futures = "0.4.42"
+console_error_panic_hook = "0.1.7"
+console_log = "1.0.0"
