--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -19,6 +19,7 @@ env:
 
 jobs:
     build-test-lint-audit:
+        name: Build, test, clippy, audit
         runs-on: ubuntu-latest
 
         steps:
@@ -34,3 +35,46 @@ jobs:
               run: cargo clippy --verbose -- -D warnings
             - name: Audit
               run: cargo audit
+
+    publish-github-pages:
+        name: Deploy to GitHub Pages
+        runs-on: ubuntu-latest
+
+        needs: build-test-lint-audit
+        if: github.ref_name == github.event.repository.default_branch
+
+        permissions:
+            id-token: write
+            pages: write
+
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
+
+            - name: Install Rust Stable
+              uses: actions-rs/toolchain@v1
+              with:
+                  toolchain: stable
+                  override: true
+                  components: rustfmt, clippy
+
+            - name: Use Node.js 18.x
+              uses: actions/setup-node@v3
+              with:
+                  node-version: 18.x
+
+            - name: Build wasm page
+              run: |
+                  npx wasm-pack build "puzzle-cube-ui" --target web --out-name web --out-dir ../web/pkg
+                  cd web
+                  npm install
+                  npm run build
+
+            - name: Upload artifact
+              uses: actions/upload-pages-artifact@v3
+              with:
+                  path: "./web/dist"
+
+            - name: Deploy to GitHub Pages
+              id: deployment
+              uses: actions/deploy-pages@v4
