--- a/puzzle-cube-ui/Cargo.toml
+++ b/puzzle-cube-ui/Cargo.toml
@@ -22,6 +22,7 @@ crate-type = ["cdylib"]
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 log = "0.4.21"
+tracing = { version = "0.1.40", features = ["log"] }
 wasm-bindgen = "0.2.92"
 wasm-bindgen-futures = "0.4.42"
 console_error_panic_hook = "0.1.7"
