--- a/puzzle-cube-ui/Cargo.toml
+++ b/puzzle-cube-ui/Cargo.toml
@@ -2,6 +2,7 @@
 name = "rusty-puzzle-cube-ui"
 version = "0.1.0"
 edition = "2021"
+authors = ["Mike Croall"]
 
 [dependencies]
 rusty-puzzle-cube = { path = "../puzzle-cube" }
