--- a/puzzle-cube-ui/Cargo.toml
+++ b/puzzle-cube-ui/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "rusty-puzzle-cube-ui"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["Mike Croall"]
 
 [dependencies]
+anyhow = "1.0.86"
 rusty-puzzle-cube = { path = "../puzzle-cube" }
 three-d = { version = "0.17.0", features = ["egui-gui"] }
 three-d-asset = { version = "0.7.0", features = ["png"] }
