--- a/puzzle-cube/Cargo.toml
+++ b/puzzle-cube/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "rusty-puzzle-cube"
-version = "0.3.3"
+version = "0.3.4"
 edition = "2021"
 authors = ["Mike Croall"]
 
 [dependencies]
+anyhow = "1.0.86"
 colored = "2.1.0"
 enum-map = "2.7.3"
 itertools = "0.13.0"
