--- a/puzzle-cube/Cargo.toml
+++ b/puzzle-cube/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rusty-puzzle-cube"
-version = "0.4.0"
+version = "0.4.1"
 edition = "2021"
 authors = ["Mike Croall"]
 
@@ -9,6 +9,7 @@ anyhow = "1.0.86"
 colored = "2.1.0"
 enum-map = "2.7.3"
 itertools = "0.13.0"
+rand = "0.8.5"
 
 [dev-dependencies]
 paste = "1.0.14"
