--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -29,8 +29,10 @@ jobs:
               run: cargo install cargo-audit
             - name: Build
               run: cargo build --verbose
+            - name: Install cargo-nextest
+              uses: taiki-e/install-action@nextest
             - name: Test
-              run: cargo test --verbose
+              run: cargo nextest run --verbose
             - name: Clippy
               run: cargo clippy --verbose -- -D warnings
             - name: Audit
