ci: fix web build via explicit getrandom wasm_js backend

--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -69,7 +69,7 @@ jobs:
 
             - name: Build wasm page
               run: |
-                  npx wasm-pack build "puzzle-cube-ui" --target web --out-name web --out-dir ../web/pkg
+                  RUSTFLAGS='--cfg getrandom_backend="wasm_js"' npx wasm-pack build "puzzle-cube-ui" --target web --out-name web --out-dir ../web/pkg
                   cd web
                   npm install
                   npm run build
