--- a/puzzle-cube/Cargo.toml
+++ b/puzzle-cube/Cargo.toml
@@ -10,6 +10,8 @@ colored = "3.0.0"
 enum-map = "2.7.3"
 itertools = "0.14.0"
 rand = "0.9.0"
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
 getrandom = { version = "0.3", features = ["wasm_js"] }
 
 [dev-dependencies]
