--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -25,8 +25,6 @@ jobs:
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
-            - name: Install cargo-audit
-              run: cargo install cargo-audit
             - name: Build
               run: cargo build --verbose
             - name: Install cargo-nextest
@@ -37,8 +35,8 @@ jobs:
               run: cargo clippy --verbose -- -D warnings
             - name: Check fmt
               run: cargo fmt --all -- --check
-            - name: Audit
-              run: cargo audit
+            - name: Audit Rust Dependencies
+              uses: actions-rust-lang/audit@v1
 
     publish-github-pages:
         name: Deploy to GitHub Pages
