--- a/puzzle-cube-ui/Cargo.toml
+++ b/puzzle-cube-ui/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rusty-puzzle-cube-ui"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2024"
 authors = ["Mike Croall"]
 
@@ -8,6 +8,7 @@ authors = ["Mike Croall"]
 anyhow = "1.0.95"
 circular-buffer = "1.1.0"
 rusty-puzzle-cube = { path = "../puzzle-cube" }
+strum = "0.27.1"
 three-d = { version = "0.18.1", features = ["egui-gui"] }
 three-d-asset = { version = "0.9.2", features = ["png"] }
 tracing = "0.1.41"
