--- a/puzzle-cube/Cargo.toml
+++ b/puzzle-cube/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rusty-puzzle-cube"
-version = "0.5.0"
+version = "0.6.0"
 edition = "2024"
 authors = ["Mike Croall"]
 
@@ -9,6 +9,7 @@ anyhow = "1.0.89"
 colored = "3.0.0"
 itertools = "0.14.0"
 rand = "0.9.0"
+strum = { version = "0.27.1", features = ["derive"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 getrandom = { version = "0.3", features = ["wasm_js"] }
