--- a/puzzle-cube-ui/Cargo.toml
+++ b/puzzle-cube-ui/Cargo.toml
@@ -3,6 +3,7 @@ name = "rusty-puzzle-cube-ui"
 version = "0.3.3"
 edition = "2024"
 authors = ["Mike Croall"]
+rust-version = "1.85.1"
 
 [dependencies]
 anyhow = "1.0.95"
