--- a/puzzle-cube/Cargo.toml
+++ b/puzzle-cube/Cargo.toml
@@ -3,6 +3,7 @@ name = "rusty-puzzle-cube"
 version = "0.7.1"
 edition = "2024"
 authors = ["Mike Croall"]
+rust-version = "1.85.1"
 
 [dependencies]
 anyhow = "1.0.89"
