--- a/puzzle-cube/Cargo.toml
+++ b/puzzle-cube/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rusty-puzzle-cube"
-version = "0.7.1"
+version = "0.7.2"
 edition = "2024"
 authors = ["Mike Croall"]
 rust-version = "1.85.1"
@@ -18,6 +18,8 @@ getrandom = { version = "0.3", features = ["wasm_js"] }
 [dev-dependencies]
 paste = "1.0.15"
 pretty_assertions = "1.4.1"
+quickcheck = "1.0.3"
+quickcheck_macros = "1.1.0"
 
 [lints.clippy]
 allow_attributes = "deny"
