--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -22,6 +22,10 @@ jobs:
         name: Build, test, clippy, audit
         runs-on: ubuntu-latest
 
+        concurrency:
+            group: build-test-lint-audit-${{ github.ref }}
+            cancel-in-progress: true
+
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
@@ -46,6 +50,10 @@ jobs:
 
         needs: build-test-lint-audit
         if: github.ref_name == github.event.repository.default_branch
+
+        concurrency:
+            group: deploy
+            cancel-in-progress: true
 
         permissions:
             id-token: write
