--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -7,12 +7,18 @@ on:
             - "**.toml"
             - "**.lock"
             - "**rust-ci.yml"
+            - "**.html"
+            - "**.js"
+            - "**.json"
     pull_request:
         paths:
             - "**.rs"
             - "**.toml"
             - "**.lock"
             - "**rust-ci.yml"
+            - "**.html"
+            - "**.js"
+            - "**.json"
 
 env:
     CARGO_TERM_COLOR: always
