--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -33,6 +33,8 @@ jobs:
             cancel-in-progress: true
 
         steps:
+            - name: Update Rust
+              run: rustup update stable
             - name: Checkout code
               uses: actions/checkout@v4
             - name: Machete
@@ -68,15 +70,11 @@ jobs:
             pages: write
 
         steps:
+            - name: Update Rust
+              run: rustup update stable
+
             - name: Checkout code
               uses: actions/checkout@v4
-
-            - name: Install Rust Stable
-              uses: actions-rs/toolchain@v1
-              with:
-                  toolchain: stable
-                  override: true
-                  components: rustfmt, clippy
 
             - name: Use Node.js 25.*
               uses: actions/setup-node@v6
