--- a/puzzle-cube-ui/Cargo.toml
+++ b/puzzle-cube-ui/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rusty-puzzle-cube-ui"
-version = "0.4.3"
+version = "0.4.4"
 edition = "2024"
 authors = ["Mike Croall"]
 
@@ -19,7 +19,7 @@ pretty_assertions = "1.4.1"
 
 [[bin]]
 name = "rusty_puzzle_cube"
-path = "./src/lib.rs"
+path = "./src/bin.rs"
 test = false               # avoid double-running all UI tests
 
 [lib]
