--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,27 @@
 [workspace]
 resolver = "3"
 members = ["puzzle-cube", "puzzle-cube-ui"]
+
+[workspace.dependencies]
+anyhow = "1.0.100"
+circular-buffer = "1.2.0"
+colored = "3.1.1"
+console_error_panic_hook = "0.1.7"
+console_log = "1.0.0"
+criterion = "0.8.1"
+getrandom = "0.3.4"
+itertools = "0.14.0"
+log = "0.4.29"
+paste = "1.0.15"
+pretty_assertions = "1.4.1"
+quickcheck = "1.0.3"
+quickcheck_macros = "1.1.0"
+rand = "0.9.2"
+rusty-puzzle-cube = { path = "puzzle-cube" }
+strum = "0.27.2"
+three-d = "0.18.2"
+three-d-asset = "0.9.2"
+tracing = "0.1.44"
+tracing-subscriber = "0.3.22"
+wasm-bindgen = "0.2.108"
+wasm-bindgen-futures = "0.4.58"
