--- a/puzzle-cube-ui/Cargo.toml
+++ b/puzzle-cube-ui/Cargo.toml
@@ -5,17 +5,17 @@ edition = "2024"
 authors = ["Mike Croall"]
 
 [dependencies]
-anyhow = "1.0.100"
-circular-buffer = "1.2.0"
-rusty-puzzle-cube = { path = "../puzzle-cube" }
-strum = "0.27.2"
-three-d = { version = "0.18.2", features = ["egui-gui"] }
-three-d-asset = { version = "0.9.2", features = ["png"] }
-tracing = "0.1.44"
-tracing-subscriber = "0.3.22"
+anyhow.workspace = true
+circular-buffer.workspace = true
+rusty-puzzle-cube.workspace = true
+strum.workspace = true
+three-d = { workspace = true, features = ["egui-gui"] }
+three-d-asset = { workspace = true, features = ["png"] }
+tracing-subscriber.workspace = true
+tracing.workspace = true
 
 [dev-dependencies]
-pretty_assertions = "1.4.1"
+pretty_assertions.workspace = true
 
 [[bin]]
 name = "rusty_puzzle_cube"
@@ -26,12 +26,12 @@ test = false               # avoid double-running all UI tests
 crate-type = ["cdylib"]
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-log = "0.4.29"
-tracing = { version = "0.1.44", features = ["log"] }
-wasm-bindgen = "0.2.108"
-wasm-bindgen-futures = "0.4.58"
-console_error_panic_hook = "0.1.7"
-console_log = "1.0.0"
+console_error_panic_hook.workspace = true
+console_log.workspace = true
+log.workspace = true
+tracing = { workspace = true, features = ["log"] }
+wasm-bindgen-futures.workspace = true
+wasm-bindgen.workspace = true
 
 [lints.clippy]
 allow_attributes = "deny"
