--- a/puzzle-cube/Cargo.toml
+++ b/puzzle-cube/Cargo.toml
@@ -5,21 +5,21 @@ edition = "2024"
 authors = ["Mike Croall"]
 
 [dependencies]
-anyhow = "1.0.100"
-colored = "3.1.1"
-itertools = "0.14.0"
-rand = "0.9.2"
-strum = { version = "0.27.2", features = ["derive"] }
+anyhow.workspace = true
+colored.workspace = true
+itertools.workspace = true
+rand.workspace = true
+strum = { workspace = true, features = ["derive"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-getrandom = { version = "0.3.4", features = ["wasm_js"] }
+getrandom = { workspace = true, features = ["wasm_js"] }
 
 [dev-dependencies]
-criterion = { version = "0.8.1", features = ["html_reports"] }
-paste = "1.0.15"
-pretty_assertions = "1.4.1"
-quickcheck = "1.0.3"
-quickcheck_macros = "1.1.0"
+criterion = { workspace = true, features = ["html_reports"] }
+paste.workspace = true
+pretty_assertions.workspace = true
+quickcheck_macros.workspace = true
+quickcheck.workspace = true
 
 [lints.clippy]
 allow_attributes = "deny"
