--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ criterion = "0.8.1"
 getrandom = "0.3.4"
 itertools = "0.14.0"
 log = "0.4.29"
-paste = "1.0.15"
+pastey = "0.2.1"
 pretty_assertions = "1.4.1"
 quickcheck = "1.0.3"
 quickcheck_macros = "1.1.0"
