--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
                   node-version: 25
             - name: Build wasm page
               run: |
-                  RUSTFLAGS='--cfg getrandom_backend="wasm_js"' npx wasm-pack build "puzzle-cube-ui" --target web --out-name web --out-dir ../web/pkg
+                  npx wasm-pack build "puzzle-cube-ui" --target web --out-name web --out-dir ../web/pkg
                   cd web
                   npm install
                   npm run build
