--- a/puzzle-cube-ui/Cargo.toml
+++ b/puzzle-cube-ui/Cargo.toml
@@ -25,6 +25,9 @@ test = false               # avoid double-running all UI tests
 [lib]
 crate-type = ["cdylib"]
 
+[target.'cfg(target_arch = "wasm32")']
+rustflags = ["--cfg", 'getrandom_backend="wasm_js"']
+
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook.workspace = true
 console_log.workspace = true
