--- a/puzzle-cube/Cargo.toml
+++ b/puzzle-cube/Cargo.toml
@@ -11,6 +11,9 @@ itertools.workspace = true
 rand.workspace = true
 strum = { workspace = true, features = ["derive"] }
 
+[target.'cfg(target_arch = "wasm32")']
+rustflags = ["--cfg", 'getrandom_backend="wasm_js"']
+
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 getrandom = { workspace = true, features = ["wasm_js"] }
 
