--- a/.github/workflows/web-build.yml
+++ b/.github/workflows/web-build.yml
@@ -1,12 +1,8 @@
 name: Web Build
 
 on:
-    push:
-        paths:
-            - "**web-build.yml"
-            - "**.html"
-            - "**.js"
-            - "**.json"
+    workflow_call:
+    workflow_dispatch:
 
 env:
     CARGO_TERM_COLOR: always
