ci: replace cargo audit with cargo deny

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,9 +43,13 @@ jobs:
                           - 'puzzle-cube-ui/**'
                           - *rust-code
 
+                      rust-tool-configs: &rust-tool-configs
+                          - '**/deny.toml'
+
                       rust-build:
                           - '**/rust-build.yml'
                           - *rust-crates
+                          - *rust-tool-configs
 
                       rust-coverage:
                           - '**/rust-coverage.yml'
