ci: use `npm ci` over `npm install`

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
               run: |
                   npx wasm-pack build "puzzle-cube-ui" --target web --out-name web --out-dir ../web/pkg
                   cd web
-                  npm install
+                  npm ci
                   npm run build
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v4
