--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,14 +3,14 @@ updates:
     - package-ecosystem: "npm"
       directory: "web/"
       schedule:
-          interval: "weekly"
+          interval: "monthly"
 
     - package-ecosystem: "cargo"
       directory: "/"
       schedule:
-          interval: "weekly"
+          interval: "monthly"
 
     - package-ecosystem: "github-actions"
       directory: "/"
       schedule:
-          interval: "weekly"
+          interval: "monthly"
