--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,11 +4,21 @@ updates:
       directory: "web/"
       schedule:
           interval: "monthly"
+      groups:
+          production-dependencies:
+              dependency-type: "production"
+          development-dependencies:
+              dependency-type: "development"
 
     - package-ecosystem: "cargo"
       directory: "/"
       schedule:
           interval: "monthly"
+      groups:
+          production-dependencies:
+              dependency-type: "production"
+          development-dependencies:
+              dependency-type: "development"
 
     - package-ecosystem: "github-actions"
       directory: "/"
